...
                Navigator.pop(context);
                callCubit.startGroupCall(chatRoomId: roomId, isVideo: false);
              },
            ),
            ListTile(
              leading: const Icon(Icons.videocam_outlined),
              title: const Text('Video Call'),
              onTap: () {
                Navigator.pop(context);
                callCubit.startGroupCall(chatRoomId: roomId, isVideo: true);
              },
            ),
          ],
...
